[gd_scene load_steps=2 format=3 uid="uid://cpuirqtojw00x"]

[ext_resource type="Script" path="res://Scripts/UI/dev_menu.gd" id="1_w1tmr"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w1tmr")

[node name="DevMenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ChangeScene" type="VBoxContainer" parent="DevMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="DevMenu/ChangeScene"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Change scene:"

[node name="OptionButton" type="OptionButton" parent="DevMenu/ChangeScene"]
layout_mode = 2
allow_reselect = true

[node name="Change_scene_button" type="Button" parent="DevMenu/ChangeScene"]
layout_mode = 2
size_flags_horizontal = 4
text = "Change"

[node name="ChangeSpell" type="VBoxContainer" parent="DevMenu"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="DevMenu/ChangeSpell"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Change spell:"

[node name="OptionButton" type="OptionButton" parent="DevMenu/ChangeSpell"]
layout_mode = 2
allow_reselect = true

[node name="Change_spell_button" type="Button" parent="DevMenu/ChangeSpell"]
layout_mode = 2
size_flags_horizontal = 4
text = "Change"

[node name="ChangeZoom" type="VBoxContainer" parent="DevMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="DevMenu/ChangeZoom"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Change zoom:"

[node name="ZoomScrollBar" type="HScrollBar" parent="DevMenu/ChangeZoom"]
layout_mode = 2

[node name="Dev_menu_button" type="Button" parent="."]
custom_minimum_size = Vector2(40, 20)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -107.0
offset_bottom = 31.0
grow_horizontal = 0
toggle_mode = true
text = "Dev Menu"

[connection signal="pressed" from="DevMenu/ChangeScene/Change_scene_button" to="." method="_on_change_scene_button_pressed"]
[connection signal="pressed" from="DevMenu/ChangeSpell/Change_spell_button" to="." method="_on_change_spell_button_pressed"]
[connection signal="value_changed" from="DevMenu/ChangeZoom/ZoomScrollBar" to="." method="_on_zoom_scroll_bar_value_changed"]
[connection signal="toggled" from="Dev_menu_button" to="." method="_on_dev_menu_button_toggled"]
